fixed hardcoded gap on media-query

--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@
     justify-content: center;
 }
 
+.featured-house__house {
+    max-width: 340px;
+    place-self: center;
+}
+
 .featured-house__houses {
     gap: 40px;
     display: grid;
@@ -33,10 +38,6 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-}
-
-.house-card__info {
-    display: block;
 }
 
 .house-card__img-container {
@@ -111,6 +112,7 @@
 
 @media (max-width: 1500px) {
     .featured-house__houses {
+        width: 100%;
         grid-template-columns: repeat(2, 1fr);
     }
 }
